move remote true

--- a/app/views/factory/admin/part_providers/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_providers/_index_tbody.html.erb
@@ -3,19 +3,19 @@
   <td><%= part_provider.export_price %></td>
   <td>
     <div data-controller="input">
-      <%= check_box_tag '[part_provider]verified', nil, part_provider.verified, data: { method: :patch, remote: true, url: admin_part_provider_path(params[:part_id], part_provider.id), action: 'input#submit' }, class: 'switch is-rounded' %>
+      <%= check_box_tag '[part_provider]verified', nil, part_provider.verified, data: { method: :patch, url: admin_part_provider_path(params[:part_id], part_provider.id), action: 'input#submit' }, class: 'switch is-rounded' %>
       <label></label>
     </div>
   </td>
   <td>
     <div data-controller="input">
-      <%= check_box_tag '[part_provider]selected', nil, part_provider.selected, data: { method: :patch, remote: true, url: admin_part_provider_path(params[:part_id], part_provider.id), action: 'input#submit' }, class: 'switch is-rounded' %>
+      <%= check_box_tag '[part_provider]selected', nil, part_provider.selected, data: { method: :patch, url: admin_part_provider_path(params[:part_id], part_provider.id), action: 'input#submit' }, class: 'switch is-rounded' %>
       <label></label>
     </div>
   </td>
   <td><time><%= part_provider.created_at.to_s(:rfc822) %></time></td>
   <td>
-    <%= link_to({ action: 'destroy', id: part_provider.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'destroy', id: part_provider.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-trash"></i>
     <% end %>
   </td>
