--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -7,7 +7,7 @@
 <th><%= Product.human_attribute_name(:name) %></th>
 <th>
   <%= Product.human_attribute_name(:logo) %>
-  <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, remote: true, aria: { label: '默认图片' }) do %>
+  <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, aria: { label: '默认图片' }) do %>
     <i class="fas fa-cog"></i>
   <% end %>
 </th>
