--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -6,13 +6,13 @@
   </td>
   <td><%= produce_plan.state %></td>
   <td>
-    <%= link_to({ action: 'show', id: produce_plan.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'show', id: produce_plan.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-eye"></i>
     <% end %>
-    <%= link_to({ action: 'edit', id: produce_plan.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'edit', id: produce_plan.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to({ action: 'destroy', id: produce_plan.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'destroy', id: produce_plan.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
