--- a/app/views/factory/admin/product_parts/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_parts/_index_tbody.html.erb
@@ -1,21 +1,21 @@
 <tr>
   <td><%= product_part.part_taxon_id %></td>
-  <td><%= link_to product_part.part.name, { controller: 'parts', action: 'show', id: product_part.part_id }, remote: true, text: true %></td>
+  <td><%= link_to product_part.part.name, { controller: 'parts', action: 'show', id: product_part.part_id }, text: true %></td>
   <td><%= product_part.part.price %></td>
   <td>
     <div data-controller="input">
-      <%= check_box_tag '[product_part]default', nil, product_part.default, data: { method: :patch, remote: true, url: admin_product_part_path(@product, product_part), action: 'input#submit' }, id: nil, class: 'switch is-rounded' %>
+      <%= check_box_tag '[product_part]default', nil, product_part.default, data: { method: :patch, url: admin_product_part_path(@product, product_part), action: 'input#submit' }, id: nil, class: 'switch is-rounded' %>
       <label></label>
     </div>
   </td>
   <td>
-    <%= link_to({ action: 'show', id: product_part.id }, { aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
+    <%= link_to({ action: 'show', id: product_part.id }, { aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' }) do %>
       <i class="fas fa-info"></i>
     <% end %>
-    <%= link_to({ action: 'edit', id: product_part.id }, { aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
+    <%= link_to({ action: 'edit', id: product_part.id }, { aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light' }) do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to({ action: 'destroy', id: product_part.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
+    <%= link_to({ action: 'destroy', id: product_part.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' }) do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
