--- a/app/views/factory/admin/product_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_tbody.html.erb
@@ -3,13 +3,13 @@
   <td><%= image_tag product_taxon.logo, class: 'image is-32x32' if product_taxon.logo.attached? %></td>
   <td><%= link_to product_taxon.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: product_taxon.factory_taxon_id }, text: true if product_taxon.factory_taxon %></td>
   <td>
-    <%= link_to({ action: 'show', id: product_taxon.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'show', id: product_taxon.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-eye"></i>
     <% end %>
-    <%= link_to({ action: 'edit', id: product_taxon.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'edit', id: product_taxon.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to({ action: 'destroy', id: product_taxon.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'destroy', id: product_taxon.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
