--- a/app/views/factory/admin/provideds/_index_tbody.html.erb
+++ b/app/views/factory/admin/provideds/_index_tbody.html.erb
@@ -4,10 +4,10 @@
   <td><%= part_provider.export_price %></td>
   <td><time><%= part_provider.created_at.to_s(:rfc822) %></time></td>
   <td>
-    <%= link_to({ action: 'edit', id: part_provider.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'edit', id: part_provider.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to({ action: 'destroy', id: part_provider.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'destroy', id: part_provider.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-trash"></i>
     <% end %>
   </td>
