fix some rename

--- a/app/views/factory/admin/factory_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/factory_taxons/_index_tbody.html.erb
@@ -1,14 +1,1 @@
-<tr>
-  <td><%= factory_taxon.name %></td>
-  <td>
-    <%= link_to({ action: 'show', id: factory_taxon.id }, { aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-info"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: factory_taxon.id }, { aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: factory_taxon.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= model.name %></td>
