--- a/app/views/factory/admin/parts/_index_thead.html.erb
+++ b/app/views/factory/admin/parts/_index_thead.html.erb
@@ -12,4 +12,4 @@
   <p><%= Part.human_attribute_name(:profit_price) %></p>
   <p><%= Part.human_attribute_name(:price) %></p>
 </th>
-<th></th>
+<th colspan="2"></th>
