--- a/app/views/factory/admin/product_items/index.html.erb
+++ b/app/views/factory/admin/product_items/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: ProductItem.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @product_items, as: :product_item %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_items, as: :product_item %>
 <% end %>
 
 <%= paginate @product_items %>
