--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -14,5 +14,4 @@
 <th><%= Product.human_attribute_name(:covers) %></th>
 <th><%= Product.human_attribute_name(:qr_prefix) %></th>
 <th><%= Product.human_attribute_name(:profit_margin) %></th>
-<th></th>
-<th></th>
+<th colspan="2"></th>
