--- a/app/views/factory/admin/part_items/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_items/_index_tbody.html.erb
@@ -1,22 +1,9 @@
-<tr>
-  <td><%= part_item.part_id %></td>
-  <td><%= part_item.qr_code %></td>
-  <td>
-    <% if part_item.qr_file.attached? %>
-      <%= image_tag part_item.qr_file.variant(resize: '100x100'), class: 'ui image' %>
-    <% end %>
-  </td>
-  <td><%= part_item.received_at %></td>
-  <td><%= part_item.state_i18n %></td>
-  <td class="ui labels">
-    <%= link_to admin_part_item_path(@part, part_item), class: 'ui blue mini icon button' do %>
-      <i class="location arrow icon"></i>
-    <% end %>
-    <%= link_to edit_admin_part_item_path(@part, part_item), class: 'ui pink mini icon button' do %>
-      <i class="pencil alternate icon"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: part_item.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'button') do %>
-      <i class="fas fa-trash"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= model.part_id %></td>
+<td><%= model.qr_code %></td>
+<td>
+  <% if model.qr_file.attached? %>
+    <%= image_tag model.qr_file.variant(resize: '100x100'), class: 'ui image' %>
+  <% end %>
+</td>
+<td><%= model.received_at %></td>
+<td><%= model.state_i18n %></td>
