--- a/app/views/factory/admin/part_items/index.html.erb
+++ b/app/views/factory/admin/part_items/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: PartItem.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @part_items, as: :part_item %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @part_items, as: :model %>
 <% end %>
 
 <%= paginate @part_items %>
