--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_tree_table', locals: { cache_key: PartTaxon.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @part_taxons, as: :part_taxon %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @part_taxons, as: :model %>
 <% end %>
 
 <%= paginate @part_taxons %>
