--- a/app/views/factory/admin/product_parts/index.html.erb
+++ b/app/views/factory/admin/product_parts/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: ProductPart.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @product_parts, as: :product_part %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_parts, as: :product_part %>
 <% end %>
 
 <%= paginate @product_parts %>
