--- a/app/views/factory/admin/product_plans/index.html.erb
+++ b/app/views/factory/admin/product_plans/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: ProductPlan.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @product_plans, as: :product_plan %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_plans, as: :product_plan %>
 <% end %>
 
 <%= paginate @product_plans %>
