--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: ProductTaxon.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @product_taxons, as: :product_taxon %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :product_taxon %>
 <% end %>
 
 <%= paginate @product_taxons %>
