--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -1,32 +1,19 @@
-<tr>
-  <td><%= link_to product.name, { action: 'show', id: product.id }, text: true %></td>
-  <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
-  <td>
-    <%= render 'com/attachments/list', target: product.covers %>
-  </td>
-  <td><%= product.qr_prefix %></td>
-  <td><%= product.profit_margin_str %></td>
-  <td>
-    <%= link_to({ controller: 'product_part_taxons', product_id: product.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-cube"></i>
-    <% end %>
-    <%= link_to({ controller: 'product_parts', product_id: product.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-cube"></i>
-    <% end %>
-    <%= link_to({ controller: 'productions', product_id: product.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-clone"></i>
-    <% end %>
-  </td>
-  <td>
-    <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: product.id }, class: 'button is-small is-success' %>
-    <%= link_to({ action: 'show', id: product.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-info"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: product.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: product.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= link_to model.name, { action: 'show', id: model.id }, text: true %></td>
+<td><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></td>
+<td>
+  <%= render 'com/attachments/list', target: model.covers %>
+</td>
+<td><%= model.qr_prefix %></td>
+<td><%= model.profit_margin_str %></td>
+<td>
+  <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fas fa-cube"></i>
+  <% end %>
+  <%= link_to({ controller: 'product_parts', product_id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fas fa-cube"></i>
+  <% end %>
+  <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fas fa-clone"></i>
+  <% end %>
+  <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, class: 'button is-small is-success' %>
+</td>
