--- a/app/views/factory/panel/factory_taxons/_index_tbody.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index_tbody.html.erb
@@ -1,1 +1,6 @@
 <td><%= model.name %></td>
+<td>
+  <%= link_to({ controller: 'providers', factory_taxon_id: model.id }, aria: { label: t('factory.panel.providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fas fa-industry"></i>
+  <% end %>
+</td>
