--- a/app/views/factory/panel/providers/index.html.erb
+++ b/app/views/factory/panel/providers/index.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'index_table', locals: { cache_key: FactoryProvider.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @factory_providers, as: :factory_provider %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @factory_providers, as: :model %>
 <% end %>
 
 <%= paginate @factory_providers %>
