--- a/app/views/factory/admin/part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_tbody.html.erb
@@ -1,24 +1,24 @@
-<tr data-depth="<%= part_taxon.depth_str %>">
+<tr data-depth="<%= model.depth_str %>">
   <td>
-    <span style="width: <%= part_taxon.depth * 1.43 %>em; display: inline-block"></span>
-    <% if !part_taxon.leaf? %>
+    <span style="width: <%= model.depth * 1.43 %>em; display: inline-block"></span>
+    <% if !model.leaf? %>
       <i class="fas fa-caret-down fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
     <% else %>
       <i class="fas fa-minus fa-fw"></i>
     <% end %>
-    <span><%= part_taxon.name %></span>
+    <span><%= model.name %></span>
   </td>
   <td>
-    <% if part_taxon.factory_taxon %>
-      <%= link_to part_taxon.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: part_taxon.factory_taxon_id } %>
-      <%= link_to '进货', { action: 'import', id: part_taxon.id } %>
+    <% if model.factory_taxon %>
+      <%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id } %>
+      <%= link_to '进货', { action: 'import', id: model.id } %>
   <% end %>
   </td>
   <td>
-    <%= link_to({ action: 'edit', id: part_taxon.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'edit', id: model.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
     <% end %>
-    <%= link_to({ action: 'destroy', id: part_taxon.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
