--- a/app/views/factory/admin/produce_plans/_show_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_show_table.html.erb
@@ -4,11 +4,11 @@
 </tr>
 <tr>
   <td class="has-text-right"><%= ProducePlan.human_attribute_name(:start_at) %></td>
-  <td><time><%= @produce_plan.start_at.to_s(:rfc822) %></time></td>
+  <td><time data-controller="time"><%= @produce_plan.start_at.to_s(:rfc822) %></time></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= ProducePlan.human_attribute_name(:finish_at) %></td>
-  <td><time><%= @produce_plan.finish_at.to_s(:rfc822) %></time></td>
+  <td><time data-controller="time"><%= @produce_plan.finish_at.to_s(:rfc822) %></time></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= ProducePlan.human_attribute_name(:state) %></td>
