--- a/app/views/factory/admin/product_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tbody.html.erb
@@ -1,8 +1,8 @@
 <tr>
   <td><%= product_plan.produce_plan&.title %></td>
   <td>
-    <p><time><%= product_plan.start_at.to_s(:rfc822) %></time></p>
-    <p><time><%= product_plan.finish_at.to_s(:rfc822) %></time></p>
+    <p><time data-controller="time"><%= product_plan.start_at.to_s(:rfc822) %></time></p>
+    <p><time data-controller="time"><%= product_plan.finish_at.to_s(:rfc822) %></time></p>
   </td>
   <td><%= product_plan.state_i18n %></td>
   <td><%= product_plan.planned_count %></td>
