--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -1,19 +1,6 @@
-<tr>
-  <td><%= produce_plan.title %></td>
-  <td>
-    <p data-controller="time"><%= produce_plan.start_at.to_s(:rfc822) %></p>
-    <p data-controller="time"><%= produce_plan.finish_at.to_s(:rfc822) %></p>
-  </td>
-  <td><%= produce_plan.state %></td>
-  <td>
-    <%= link_to({ action: 'show', id: produce_plan.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-eye"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: produce_plan.id }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: produce_plan.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= model.title %></td>
+<td>
+  <p data-controller="time"><%= model.start_at.to_s(:rfc822) %></p>
+  <p data-controller="time"><%= model.finish_at.to_s(:rfc822) %></p>
+</td>
+<td><%= model.state %></td>
