--- a/app/views/factory/admin/part_taxons/import.html.erb
+++ b/app/views/factory/admin/part_taxons/import.html.erb
@@ -1,5 +1,8 @@
 <%= render layout: 'index_table', locals: { cache_key: Product.column_names.hash } do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :product %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
+  <% if params[:product_id] == product.id.to_s %>
+    <%= render partial: 'production', collection: product.productions, as: :model %>
+  <% end %>
 <% end %>
 
 <%= paginate @products %>
