--- a/app/views/factory/admin/part_taxons/_import/_index_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_import/_index_tr.html.erb
@@ -14,3 +14,7 @@
     </turbo-frame>
   </td>
 </tr>
+
+<% if params[:product_id] == model.id.to_s %>
+  <%= render partial: 'production', collection: model.productions, as: :model %>
+<% end %>
