--- a/app/views/factory/admin/part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_tbody.html.erb
@@ -10,6 +10,8 @@
 <td>
   <% if model.factory_taxon %>
     <%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id } %>
-    <%= link_to '进货', { action: 'import', id: model.id } %>
+    <%= link_to({ action: 'import', id: model.id }, aria: { label: t('factory.admin.part_taxons.import.title') }) do %>
+      <i class="fas fa-sign-in-alt"></i>
+    <% end %>
   <% end %>
 </td>
