--- a/app/views/factory/panel/providers/_index_tr.html.erb
+++ b/app/views/factory/panel/providers/_index_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <turbo-frame data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'destroy', id: model.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' }) do %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fas fa-trash-alt"></i>
       <% end %>
     </turbo-frame>
