--- a/app/views/factory/admin/part_taxons/_import/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_import/_index_tbody.html.erb
@@ -1,14 +1,14 @@
 <td>
-  <%= link_to({ action: 'productions', product_id: product.id }) do %>
+  <%= link_to({ action: 'productions', product_id: model.id }) do %>
     <i class="fas fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree_remote#expand"></i>
   <% end %>
-  <%= image_tag product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if product.logo.attached? %>
-  <%= product.name %>
+  <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
+  <%= model.name %>
 </td>
-<td><%= product.qr_prefix %></td>
+<td><%= model.qr_prefix %></td>
 <td>
   <table class="table is-borderless">
-    <% product.parts.each do |part| %>
+    <% model.parts.each do |part| %>
       <tr>
         <td><span class="tag"><%= link_to part.name, { controller: 'parts', action: 'show', id: part.id } %></span></td>
         <td><%= part.price %></td>
@@ -17,14 +17,14 @@
   </table>
 </td>
 <td>
-  <% if @select_ids.include?(product.id) %>
+  <% if @select_ids.include?(model.id) %>
     <i class="fas fa-check has-text-success"></i>
   <% else %>
     <i class="fas fa-times has-text-gery"></i>
   <% end %>
 </td>
 <td>
-  <%= link_to({ controller: 'products', action: 'part', id: product.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ controller: 'products', action: 'part', id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fas fa-cube"></i>
   <% end %>
 </td>
