--- a/app/views/factory/admin/parts/index.html.erb
+++ b/app/views/factory/admin/parts/index.html.erb
@@ -5,7 +5,7 @@
         <%= taxon.name %>
         <%= link_to({ controller: 'part_taxons', action: 'import', id: taxon.id }, aria: { label: t('factory.admin.part_taxons.import.title') }) do %>
           <i class="fas fa-sign-in-alt"></i>
-        <% end %>
+        <% end if taxon.factory_taxon %>
       </td>
     </tr>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: parts, as: :model %>
