--- a/app/views/factory/admin/part_taxons/_import/_index_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_import/_index_tr.html.erb
@@ -1,8 +1,8 @@
 <tr data-controller="tree_remote show" data-action="mouseenter->show#show mouseleave->show#hide" id="tr_<%= model.id %>">
   <td>
     <turbo-frame>
-      <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, class: 'button is-small is-success' %>
-      <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, data: { turbo_frame: '_top' }, class: 'button is-small is-success' %>
+      <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
         <i class="fas fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
