--- a/app/views/factory/admin/part_taxons/_import/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_import/_index_tbody.html.erb
@@ -1,9 +1,11 @@
 <td>
-  <%= link_to({ action: 'productions', product_id: model.id }) do %>
-    <i class="fas fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree_remote#expand"></i>
-  <% end %>
-  <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
-  <%= model.name %>
+  <turbo-frame>
+    <%= link_to({ action: 'productions', product_id: model.id }) do %>
+      <i class="fas fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree_remote#expand"></i>
+    <% end %>
+    <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
+    <%= model.name %>
+  </turbo-frame>
 </td>
 <td><%= model.qr_prefix %></td>
 <td>
