--- a/app/views/factory/admin/part_taxons/_production.html.erb
+++ b/app/views/factory/admin/part_taxons/_production.html.erb
@@ -1,4 +1,4 @@
-<tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= @part_taxon.id %>_<%= production.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
     <span style="width: 1em; display: inline-block"></span>
     <%= image_tag production.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if production.product.logo.attached? %>
@@ -24,11 +24,13 @@
   </td>
   <td></td>
   <td>
-    <%= link_to({ controller: 'productions', action: 'show', product_id: production.product_id, id: production.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-info"></i>
-    <% end %>
-    <%= link_to({ controller: 'productions', action: 'provide', product_id: production.product_id, id: production.id, part_taxon_id: @part_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-tractor"></i>
-    <% end %>
+    <turbo-frame>
+      <%= link_to({ controller: 'productions', action: 'show', product_id: production.product_id, id: production.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-info"></i>
+      <% end %>
+      <%= button_to({ controller: 'productions', action: 'provide', product_id: production.product_id, id: production.id, part_taxon_id: @part_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fas fa-tractor"></i>
+      <% end %>
+    </turbo-frame>
   </td>
 </tr>
