--- a/app/views/factory/admin/productions/provide.turbo_stream.erb
+++ b/app/views/factory/admin/productions/provide.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.update 'visit' do %>
-  <div data-controller="visit" data-visit-url-value="<%= url_for(product_id: @production.product_id) %>"></div>
+  <div data-controller="visit"></div>
 <% end %>
